<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data >
    <variable
        name="datas"
        type="com.hugo.mytest.bean.Datas"/>

        <variable
            name="volist"
            type="com.hugo.mytest.bean.SkuVoList"/>
        <import type="android.databinding.ObservableArrayMap"/>
        <variable
            name="map"
            type="ObservableArrayMap&lt;String,String&gt;"/>
        <variable
            name="onClick"
            type="com.hugo.mytest.utils.ClickCallBack"/>
    </data>
<android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.15"
        />
        <android.support.constraint.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/recyclerView_color"
            app:layout_constraintWidth_percent="0.55"
            android:orientation="vertical"
            >

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/button_layout"
                app:layout_constraintTop_toTopOf="parent"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    >
                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/tv_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_text_1"
                        android:textColor="@color/textColor"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_1"
                        app:setImage="@{datas.imgUrl_main}" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{datas.title}"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintLeft_toRightOf="@id/iv_icon"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/iv_icon"
                        tools:text="策策策车车很多事很多杀佛挡杀佛的时候婚纱范德萨佛挡杀佛电话撒好的是好事" />

                    <TextView
                        android:id="@+id/tv_aaa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@{ Integer.toString(datas.wholesalePrice)}"
                        android:textColor="@color/btnColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                        app:layout_constraintLeft_toRightOf="@id/iv_icon"
                        app:layout_constraintRight_toRightOf="@+id/tv_bbb"
                        tools:text="￥25   拿货价" />

                    <TextView
                        android:id="@id/tv_bbb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@{ Integer.toString(datas.packagePrice)}"
                        android:textColor="@color/btnColor"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                        app:layout_constraintLeft_toRightOf="@id/tv_aaa"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="￥25   打包价" />


                </android.support.constraint.ConstraintLayout>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp" />
                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>
            <android.support.constraint.ConstraintLayout
                android:id="@id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                
                >
                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_text_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/btn_cancel"
                    />
                <Button
                    android:id="@id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_text_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/btn_add"
                    />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
        <View
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/lineColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/content"
            />
    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/line"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <TextView
            android:id="@+id/tv_type_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="策策策"
            android:text="@{volist.colour + volist.theSize}"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            />
        <TextView
            android:id="@+id/tv_cccc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_type_color"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:textColor="@color/textColor"
            android:text="@string/details_text_5"
            />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_type_color"
            android:layout_marginTop="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/bg_text"
            android:textSize="26sp"
            android:text="@{map.get(volist.goodsNub)}"
            tools:text="666"
            android:padding="20dp"

            />

        <android.support.v7.widget.GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:columnCount="3"
            app:rowCount="4"
            app:orientation="horizontal"
            app:useDefaultMargins="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_number"
            android:layout_marginTop="10dp"
            android:padding="1dp"
            android:background="@color/lineColor"
            >
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_number_1"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_1)}"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/details_text_number_1"
                />
            <TextView
                android:id="@+id/tv_number_2"
                android:text="@string/details_text_number_2"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_2)}"
                />
            <TextView
                android:id="@+id/tv_number_3"
                android:text="@string/details_text_number_3"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_3)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <TextView
                android:id="@+id/tv_number_4"
                android:text="@string/details_text_number_4"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_4)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                />
            <TextView
                android:id="@+id/tv_number_5"
                android:text="@string/details_text_number_5"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_5)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
            <TextView
                android:id="@+id/tv_number_6"
                android:text="@string/details_text_number_6"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_6)}"
                android:textSize="18sp"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                />

            <TextView
                android:id="@+id/tv_number_7"
                android:text="@string/details_text_number_7"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_7)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                />
            <TextView
                android:id="@+id/tv_number_8"
                android:text="@string/details_text_number_8"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_8)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                />
            <TextView
                android:id="@+id/tv_number_9"
                android:text="@string/details_text_number_9"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_9)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                />

            <TextView
                android:id="@+id/tv_number_10"
                android:text="@string/details_text_number_clear"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_clear)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                />
            <TextView
                android:id="@+id/tv_number_0"
                android:text="@string/details_text_number_0"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_0)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                />
            <TextView
                android:id="@+id/tv_number_11"
                android:text="@string/details_text_number_delete"
                android:onClick="@{()  -> onClick.onClick(@string/details_text_number_delete)}"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:background="@android:color/white"
                app:layout_columnWeight="1"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="1dp"
                />
        </android.support.v7.widget.GridLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>

</layout>